[shasha] fix-3.3: font style

--- a/styles/css1.css
+++ b/styles/css1.css
@@ -22,6 +22,17 @@
 
 .name {
   float: left;
+  width: 85%;
+}
+
+.name span {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  font-family: 'Bree Serif', serif;
+  font-size: 25px;
+  line-height: 70px;
+  color: #fff;
 }
 
 .triangle {
@@ -54,12 +65,13 @@
 
 .list a {
   display: inline-block;
-  margin-left: 43px;
   text-decoration: none;
   color: #fff;
   vertical-align: top;
   height: 70px;
   line-height: 70px;
+  font-family: 'Bree Serif', serif;
+  font-size: 25px;
 }
 
 .option {
@@ -71,11 +83,10 @@
 .option li {
   overflow: hidden;
   height: 70px;
-  border-bottom: 1px solid rgb(201, 198, 198);
 }
 
-.option li:last-child {
-  border: none;
+.line {
+  border-bottom: 1px solid rgb(201, 198, 198);
 }
 
 .option li > div {
@@ -84,7 +95,6 @@
   height: 70px;
   margin-left: 15px;
 }
-
 
 .heart {
   float: left;
@@ -103,26 +113,3 @@
   background: url(../static/bkg.png) no-repeat 15px 20px;
   background-size: 190%;
 }
-
-/* .heart {
-  background: url(../static/bkg.png) no-repeat 13px -34px;
-  background-size: 49%;
-}
-
-.star {
-  background: url(../static/bkg.png) no-repeat -43px 19px;
-  background-size: 49%;
-}
-
-.chat {
-  background: url(../static/bkg.png) no-repeat 26px 19px;
-  background-size: 49%;
-  z-index: -1px;
-} */
-/* .option {
- disp none;
-} */
-
-/* li:before {
-  content:url(../static/bkg.png);
-} */
