--- a/styles/css1.css
+++ b/styles/css1.css
@@ -48,6 +48,18 @@
   border-left: 10px solid transparent;
 }
 
+.blank, .list {
+  display: none;
+}
+
+.bkg:hover .blank {
+  display: block;
+} 
+
+.bkg:hover .list {
+  display: block;
+} 
+
 .blank {
   margin-left: 271px;
   width:0px;
@@ -56,7 +68,6 @@
   border-right: 10px solid transparent;
   border-bottom: 14px solid orangered;
   border-left: 10px solid transparent;
-  }
 }
 
 .list {
@@ -113,3 +124,4 @@
   background: url(../static/bkg.png) no-repeat 15px 20px;
   background-size: 190%;
 }
+
